--- a/langs/fr_FR/nsinfo.lang
+++ b/langs/fr_FR/nsinfo.lang
@@ -30,6 +30,8 @@ NSINFOAboutDesc45=<b>notre support</b>
 
 NSINFOAboutDescDolistore=Retrouver tous nos modules dans le
 
+NSINFOChangeLog=ChangeLog
+
 #
 # Page d'administration
 #
